<resources>
    <string name="app_name">Parque</string>
    <string name="title_activity_main_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_new_car">Add New Car</string>
    <string name="title_activity_menuscreen">Menuscreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aurélien Salomon</string>
    <string name="nav_header_phone">+91-9895738294</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_nearByParkings">Nearby Parkings</string>
    <string name="menu_pass">Your Pass</string>
    <string name="menu_buyCredits">Buy Credits</string>
    <string name="menu_parkingHistory">Parking History</string>
    <string name="menu_cars">Your Cars</string>
    <string name="menu_fastTags">FastTags</string>
    <string name="title_activity_parque_menuctivity">Parque_menuctivity</string>
    <string name="title_activity_parquemenu">Parquemenu</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_parque_menu">ParqueMenuActivity</string>
    <string name="title_activity_first_phase_menu">FirstPhaseMenuActivity</string>


</resources>